@@ -3,6 +3,7 @@
     <li>display build parameters (PR #246)</li>
     <li>auto load builds option in settings (PR #246)</li>
     <li>#249 PT_BRANCH_TAG is unsupported</li>
+    <li>#247 Plugin 'Jenkins Control Plugin' failed to initialize in Android Studio 4.1</li>
 </ul>
 <h3>0.13.8</h3>
 <ul>
@@ -94,5 +95,5 @@
     <li>Announcement: Deprecate Jenkins 1 Support</li>
 </ul>
 
-<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.8/README.md">Read Me</a><br/>
-<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.8/CHANGELOG.txt">Changelog</a>
+<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.9/README.md">Read Me</a><br/>
+<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.9/CHANGELOG.txt">Changelog</a>
